[package]
name = "simple_voxels"
version = "0.1.0"
edition = "2024"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
cfg-if = "1.0.0"
bytemuck = "1.23.0"
anyhow = "1.0.98"
