[package]
name = "gpu-voxel-terrain"
version = "0.1.0"
edition = "2024"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[dependencies]
cfg-if = "1.0.0"
winit = { version = "0.29", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = "1.23.0"
anyhow = "1.0.98"

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]